crates/specforge-emitter/src/snapshots/specforge_emitter__trace__tests__format_report_snapshot.snap
---
source: crates/specforge-emitter/src/trace.rs
expression: output
---
Traceability Report
===================

Chain: chain_cli_tool (deliverable)
  chain_cli_tool --bundles--> chain_data_entry
  chain_data_entry --traces_to--> input_validation
  input_validation --implements--> validate_input
  validate_input --references--> data_integrity

Summary: 1 chains, 0 gaps
